# tts_webui_extension.srt_tools

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build_wheel.yml
tests/: test_parser.py
tts_webui_extension/srt_tools/: __init__.py  main.py
