[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tts_webui_extension.srt_tools"
version = "0.1.0"
description = "Import and parse multiple SRT files into JSON segments for later TTS batching."
readme = "README.md"
authors = [
    { name="rsxdalv", email="" }
]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    # Add your dependencies here
    # "torch",
]
urls = { "Homepage" = "https://github.com/rsxdalv/tts_webui_extension.srt_tools" }

[tool.setuptools.packages.find]
namespace = true
